// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectsCarousel> matches snapshot with: Large width: ProjectsCarouselLargeView.test.js.snap 1`] = `
"<ProjectsContent project_carousels={{...}} main_counter={3}>
  <div className=\\"project-carousels\\">
    <WithStyles(Carousel) className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={1}>
      <Carousel classes={{...}} className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={1}>
        <div className=\\"Carousel-root-1 project-carousel\\" onMouseEnter={[Function: bound stop]} onMouseOut={[Function: bound reset]}>
          <CarouselItem display={true} active={false} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]}>
            <div className=\\"CarouselItem\\">
              <ForwardRef(Slide) direction=\\"left\\" in={false} timeout={200}>
                <Transition nodeRef={{...}} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} appear={true} in={false} timeout={200} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                  <div style={{...}}>
                    <ProjectsCard project={{...}} index={0} show_scrollers={false}>
                      <div>
                        <ForwardRef(Fade) in={true} timeout={2000}>
                          <Transition appear={true} in={true} nodeRef={[undefined]} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} timeout={2000} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                            <Row className=\\"projects-card\\" style={{...}} noGutters={false}>
                              <div style={{...}} className=\\"projects-card row\\">
                                <Col xs={6}>
                                  <div className=\\"col-6\\">
                                    <img src=\\"main-project-1.jpg\\" className=\\"card-image\\" alt=\\"main-project-1\\" />
                                  </div>
                                </Col>
                                <ForwardRef(Grow) in={true} timeout={1500} style={{...}}>
                                  <Transition appear={true} in={true} nodeRef={[undefined]} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} addEndListener={[Function: addEndListener]} timeout={1500} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                                    <Col xs={6} className=\\"card-info\\" style={{...}}>
                                      <div style={{...}} className=\\"card-info col-6\\">
                                        <h2 className=\\"title-text-card\\">
                                          main-project-1
                                        </h2>
                                        <div className=\\"main-text-projects\\">
                                          <p>
                                            description-main-1
                                          </p>
                                        </div>
                                        <button type=\\"button\\" className=\\"card-button\\" onClick={[Function: onClick]} variant=\\"outline-primary\\">
                                          Learn more
                                        </button>
                                      </div>
                                    </Col>
                                  </Transition>
                                </ForwardRef(Grow)>
                              </div>
                            </Row>
                          </Transition>
                        </ForwardRef(Fade)>
                        <div />
                      </div>
                    </ProjectsCard>
                  </div>
                </Transition>
              </ForwardRef(Slide)>
            </div>
          </CarouselItem>
          <CarouselItem display={false} active={true} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]} />
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-next-11\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onBlur={[Function (anonymous)]} onClick={[Function: bound next]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Next\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-prev-12\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onBlur={[Function (anonymous)]} onClick={[Function: bound prev]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Previous\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <Indicators classes={{...}} length={2} active={1} press={[Function: bound setActive]} indicatorContainerProps={[undefined]} indicatorProps={[undefined]} activeIndicatorProps={[undefined]}>
            <div className=\\"Carousel-indicators-2 \\" style={[undefined]}>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 Carousel-active-4 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
            </div>
          </Indicators>
        </div>
      </Carousel>
    </WithStyles(Carousel)>
    <WithStyles(Carousel) className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={0}>
      <Carousel classes={{...}} className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={0}>
        <div className=\\"Carousel-root-1 project-carousel\\" onMouseEnter={[Function: bound stop]} onMouseOut={[Function: bound reset]}>
          <CarouselItem display={true} active={true} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]}>
            <div className=\\"CarouselItem\\">
              <ForwardRef(Slide) direction=\\"right\\" in={true} timeout={200}>
                <Transition nodeRef={{...}} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} appear={true} in={true} timeout={200} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                  <div style={{...}}>
                    <ProjectsCard project={{...}} index={0} show_scrollers={false}>
                      <div>
                        <ForwardRef(Fade) in={true} timeout={2000}>
                          <Transition appear={true} in={true} nodeRef={[undefined]} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} timeout={2000} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                            <Row className=\\"projects-card\\" style={{...}} noGutters={false}>
                              <div style={{...}} className=\\"projects-card row\\">
                                <Col xs={6}>
                                  <div className=\\"col-6\\">
                                    <img src=\\"main-project-3.jpg\\" className=\\"card-image\\" alt=\\"main-project-3\\" />
                                  </div>
                                </Col>
                                <ForwardRef(Grow) in={true} timeout={1500} style={{...}}>
                                  <Transition appear={true} in={true} nodeRef={[undefined]} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} addEndListener={[Function: addEndListener]} timeout={1500} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                                    <Col xs={6} className=\\"card-info\\" style={{...}}>
                                      <div style={{...}} className=\\"card-info col-6\\">
                                        <h2 className=\\"title-text-card\\">
                                          main-project-3
                                        </h2>
                                        <div className=\\"main-text-projects\\">
                                          <p>
                                            description-main-3
                                          </p>
                                        </div>
                                        <button type=\\"button\\" className=\\"card-button\\" onClick={[Function: onClick]} variant=\\"outline-primary\\">
                                          Learn more
                                        </button>
                                      </div>
                                    </Col>
                                  </Transition>
                                </ForwardRef(Grow)>
                              </div>
                            </Row>
                          </Transition>
                        </ForwardRef(Fade)>
                        <div />
                      </div>
                    </ProjectsCard>
                  </div>
                </Transition>
              </ForwardRef(Slide)>
            </div>
          </CarouselItem>
          <CarouselItem display={false} active={false} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]} />
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-next-11\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onBlur={[Function (anonymous)]} onClick={[Function: bound next]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Next\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-prev-12\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onBlur={[Function (anonymous)]} onClick={[Function: bound prev]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Previous\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <Indicators classes={{...}} length={2} active={0} press={[Function: bound setActive]} indicatorContainerProps={[undefined]} indicatorProps={[undefined]} activeIndicatorProps={[undefined]}>
            <div className=\\"Carousel-indicators-2 \\" style={[undefined]}>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 Carousel-active-4 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
            </div>
          </Indicators>
        </div>
      </Carousel>
    </WithStyles(Carousel)>
  </div>
</ProjectsContent>"
`;

exports[`<ProjectsCarousel> matches snapshot with: Small width: ProjectsCarouselSmallView.test.js.snap 1`] = `
"<ProjectsContent project_carousels={{...}} main_counter={3}>
  <div className=\\"project-carousels\\">
    <WithStyles(Carousel) className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={1}>
      <Carousel classes={{...}} className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={1}>
        <div className=\\"Carousel-root-1 project-carousel\\" onMouseEnter={[Function: bound stop]} onMouseOut={[Function: bound reset]}>
          <CarouselItem display={true} active={false} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]}>
            <div className=\\"CarouselItem\\">
              <ForwardRef(Slide) direction=\\"left\\" in={false} timeout={200}>
                <Transition nodeRef={{...}} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} appear={true} in={false} timeout={200} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                  <div style={{...}}>
                    <ProjectsCard project={{...}} index={0} show_scrollers={false}>
                      <div className=\\"projects-card\\">
                        <div className=\\"title-text-card\\">
                          <h2>
                            main-project-1
                          </h2>
                        </div>
                        <div className=\\"card-image-container\\">
                          <img className=\\"card-image\\" src=\\"main-project-1.jpg\\" alt=\\"main-project-1\\" />
                        </div>
                        <div className=\\"main-text-projects-description\\">
                          description-main-1
                        </div>
                        <div className=\\"button-div\\">
                          <button type=\\"button\\" className=\\"card-button-small\\" onClick={[Function: onClick]} variant=\\"outline-primary\\">
                            Learn more
                          </button>
                        </div>
                      </div>
                    </ProjectsCard>
                  </div>
                </Transition>
              </ForwardRef(Slide)>
            </div>
          </CarouselItem>
          <CarouselItem display={false} active={true} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]} />
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-next-11\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onBlur={[Function (anonymous)]} onClick={[Function: bound next]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Next\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-prev-12\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onBlur={[Function (anonymous)]} onClick={[Function: bound prev]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Previous\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <Indicators classes={{...}} length={2} active={1} press={[Function: bound setActive]} indicatorContainerProps={[undefined]} indicatorProps={[undefined]} activeIndicatorProps={[undefined]}>
            <div className=\\"Carousel-indicators-2 \\" style={[undefined]}>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 Carousel-active-4 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
            </div>
          </Indicators>
        </div>
      </Carousel>
    </WithStyles(Carousel)>
    <WithStyles(Carousel) className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={0}>
      <Carousel classes={{...}} className=\\"project-carousel\\" navButtonsAlwaysVisible={true} timeout={200} animation=\\"slide\\" autoPlay={false} index={0}>
        <div className=\\"Carousel-root-1 project-carousel\\" onMouseEnter={[Function: bound stop]} onMouseOut={[Function: bound reset]}>
          <CarouselItem display={true} active={true} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]}>
            <div className=\\"CarouselItem\\">
              <ForwardRef(Slide) direction=\\"right\\" in={true} timeout={200}>
                <Transition nodeRef={{...}} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} appear={true} in={true} timeout={200} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                  <div style={{...}}>
                    <ProjectsCard project={{...}} index={0} show_scrollers={false}>
                      <div className=\\"projects-card\\">
                        <div className=\\"title-text-card\\">
                          <h2>
                            main-project-3
                          </h2>
                        </div>
                        <div className=\\"card-image-container\\">
                          <img className=\\"card-image\\" src=\\"main-project-3.jpg\\" alt=\\"main-project-3\\" />
                        </div>
                        <div className=\\"main-text-projects-description\\">
                          description-main-3
                        </div>
                        <div className=\\"button-div\\">
                          <button type=\\"button\\" className=\\"card-button-small\\" onClick={[Function: onClick]} variant=\\"outline-primary\\">
                            Learn more
                          </button>
                        </div>
                      </div>
                    </ProjectsCard>
                  </div>
                </Transition>
              </ForwardRef(Slide)>
            </div>
          </CarouselItem>
          <CarouselItem display={false} active={false} isNext={false} child={{...}} animation=\\"slide\\" timeout={200} next={[Function: bound next]} prev={[Function: bound prev]} />
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-next-11\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onClick={[Function: bound next]} aria-label=\\"Next\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound next]} aria-label=\\"Next\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8 Carousel-next-11\\" onBlur={[Function (anonymous)]} onClick={[Function: bound next]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Next\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <div className=\\"Carousel-buttonWrapper-5 Carousel-fullHeightHoverWrapper-6 Carousel-prev-12\\">
            <WithStyles(ForwardRef(IconButton)) className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
              <ForwardRef(IconButton) classes={{...}} className=\\"Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                  <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" centerRipple={true} focusRipple={true} disabled={false} onClick={[Function: bound prev]} aria-label=\\"Previous\\">
                    <button className=\\"MuiButtonBase-root MuiIconButton-root Carousel-button-7 Carousel-buttonVisible-9 Carousel-fullHeightHoverButton-8  Carousel-prev-12\\" onBlur={[Function (anonymous)]} onClick={[Function: bound prev]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} type=\\"button\\" disabled={false} aria-label=\\"Previous\\">
                      <span className=\\"MuiIconButton-label\\">
                        <ForwardRef>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon) classes={{...}}>
                              <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                <path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\" />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </span>
                      <WithStyles(memo) center={true}>
                        <ForwardRef(TouchRipple) classes={{...}} center={true}>
                          <span className=\\"MuiTouchRipple-root\\">
                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                          </span>
                        </ForwardRef(TouchRipple)>
                      </WithStyles(memo)>
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
          </div>
          <Indicators classes={{...}} length={2} active={0} press={[Function: bound setActive]} indicatorContainerProps={[undefined]} indicatorProps={[undefined]} activeIndicatorProps={[undefined]}>
            <div className=\\"Carousel-indicators-2 \\" style={[undefined]}>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 Carousel-active-4 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 Carousel-active-4 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
              <ForwardRef size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                <WithStyles(ForwardRef(SvgIcon)) size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                  <ForwardRef(SvgIcon) classes={{...}} size=\\"small\\" className=\\"Carousel-indicator-3 undefined\\" style={[undefined]} onClick={[Function: onClick]}>
                    <svg className=\\"MuiSvgIcon-root Carousel-indicator-3 undefined\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]} size=\\"small\\" style={[undefined]} onClick={[Function: onClick]}>
                      <circle cx=\\"12\\" cy=\\"12\\" r=\\"8\\" />
                    </svg>
                  </ForwardRef(SvgIcon)>
                </WithStyles(ForwardRef(SvgIcon))>
              </ForwardRef>
            </div>
          </Indicators>
        </div>
      </Carousel>
    </WithStyles(Carousel)>
  </div>
</ProjectsContent>"
`;
